--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Edgar Ochoa soy Web Developer, apasionado por el desarrollo web. 
+      Siempre me gusta aprender cosas nuevas y eso me lleva a estar en constante crecimiento.
+      "
+    />
+    <meta property="og:url" content="https://edgarizagni.netlify.app/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Portafolio de Edgar Ochoa" />
+    <meta property="og:image" content="favicon.png" />
+    <title>Edgar Izagni</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="shortcut icon" href="favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
